# vibervn-context-engine

./: Cargo.toml  README-vi.md  README-zh.md  README.md
npm/vibervn-context-engine-linux-arm64/: README.md
src/: chat.rs  config.rs  defender.rs  engine_boot.rs  engine_ops.rs  fs_tools.rs  lib.rs  main.rs  mcp.rs  mcp_session_store.rs  mcp_setup.rs  server.rs
src/assets/: index.html
src/embedding/: cache.rs  mod.rs  voyage.rs
src/indexing/: events.rs  import_resolver.rs  mod.rs  pipeline.rs  walker.rs  watcher.rs
src/indexing/frameworks/: django.rs  express.rs  go_gin.rs  mod.rs  react.rs  spring.rs
src/llm/: google.rs  mod.rs  openai.rs
src/parsing/: chunker.rs  generated.rs  mod.rs  symbols.rs
src/query/: engine.rs  filters.rs  graph_expand.rs  reranker.rs
src/store/: mod.rs  ops.rs  schema.rs
src/vector/: mod.rs  shard_file.rs  sharded.rs
tests/: integration.rs  mcp_session_restore.rs  repro_notepad.rs
