[package]
name = "context-engine-rs"
version = "0.1.34"
edition = "2024"

[dependencies]
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.6"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
tempfile = "3"
anyhow = "1"
surrealdb = { version = "2", default-features = false, features = ["kv-rocksdb"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rayon = "1"
futures = "0.3"
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-objc = "3"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1"
tree-sitter-dart = "0.2"
tree-sitter-lua = "0.5"
tree-sitter-luau = "1"
tree-sitter-svelte-ng = "1"
tree-sitter-pascal = "0.10"
tree-sitter-liquid = { path = "vendor/tree-sitter-liquid" }
base64 = "0.22"
md5 = "0.7"
filetime = "0.2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-streamable-http-server"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
schemars = "1"
tower-service = "0.3"

[profile.dev]
debug = 0

[profile.dev.package."*"]
debug = false

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
base64 = "0.22"
